Fix align mods name

--- a/pt-card/__content/_distribute/pt-card__content_distribute_center.post.css
+++ b/pt-card/__content/_distribute/pt-card__content_distribute_center.post.css
@@ -1,4 +1,4 @@
-.pt-card__content_align_center {
+.pt-card__content_distribute_center {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
