--- a/pt-card/__content/_distribute/pt-card__content_distribute_right.post.css
+++ b/pt-card/__content/_distribute/pt-card__content_distribute_right.post.css
@@ -1,4 +1,4 @@
-.pt-card__content_align_right {
+.pt-card__content_distribute_right {
 	display: flex;
 	flex-direction: column;
 	align-items: flex-end;
